--- a/src/angular/road-story-tracking/src/styles.css
+++ b/src/angular/road-story-tracking/src/styles.css
@@ -15,6 +15,10 @@ html, body{
     min-width: 320px;
 }
 
+.clearfix{
+    clear: both;
+}
+
 .content .wrapper {
     padding: calc(64px + 2%) 2% 2% 2%;
 }
