--- a/src/angular/road-story-tracking/src/app/home/components/comment/comments.component.html
+++ b/src/angular/road-story-tracking/src/app/home/components/comment/comments.component.html
@@ -1,10 +1,10 @@
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>
-            <h3>Comments</h3>
-        </mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
+<mat-accordion>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                <h3>Comments:</h3>
+            </mat-panel-title>
+        </mat-expansion-panel-header>
         <div class="new-comment" *ngIf="isAuthenticated">
             <span>Add new comment:</span>
             <br>
@@ -16,10 +16,11 @@
             </mat-form-field>
         </div>
         <div *ngFor="let comment of comments" class="comment">
-            <img [src]="comment.commentAuthor.image || 'assets/images/account-image.svg'"
-                width="32px" height="32px" style="margin-right: 8px" class="pull-left">
+            <img [src]="comment.commentAuthor.image || 'assets/images/account-image.svg'" width="32px" height="32px" style="margin-right: 8px"
+                class="pull-left">
             <small class="pull-left" style="margin-top: 8px;" *ngIf="comment.commentAuthor.firstName !== '' || comment.commentAuthor.lastName !== ''">
-                {{ comment.commentAuthor.firstName }} {{ comment.commentAuthor.lastName }} | {{ comment.createDate | date:'d.M.yy, h:mm a' }}
+                {{ comment.commentAuthor.firstName }} {{ comment.commentAuthor.lastName }} | {{ comment.createDate | date:'d.M.yy, h:mm a'
+                }}
             </small>
             <small class="pull-left" style="margin-top: 8px;" *ngIf="comment.commentAuthor.firstName === '' && comment.commentAuthor.lastName === ''">
                 {{ comment.commentAuthor.userName }} | {{ comment.createDate | date:'d.M.yy, h:mm a' }}
@@ -30,5 +31,5 @@
             <br>
             <span style="padding-left: 40px;">{{ comment.text }}</span>
         </div>
-    </mat-card-content>
-</mat-card>
+    </mat-expansion-panel>
+</mat-accordion>
