--- a/src/angular/road-story-tracking/src/app/home/components/my-markers/my-markers.component.html
+++ b/src/angular/road-story-tracking/src/app/home/components/my-markers/my-markers.component.html
@@ -1,64 +1,66 @@
 <div class="wrapper">
-    <mat-card>
-        <mat-card-header>
-            <mat-card-title>
-                <h1>My events</h1>
-            </mat-card-title>
-        </mat-card-header>
-        <div>
-            <mat-table [dataSource]="markersData" *ngIf="!isMobile">
+    <mat-accordion>
+        <mat-expansion-panel [expanded]="true">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    <h3>My events:</h3>
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div>
+                <mat-table [dataSource]="markersData" *ngIf="!isMobile">
+                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                    <mat-row class="pointer" *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row class="pointer" *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                    <ng-container matColumnDef="name">
+                        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ element.name }}</mat-cell>
+                    </ng-container>
 
-                <ng-container matColumnDef="name">
-                    <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-                    <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ element.name }}</mat-cell>
-                </ng-container>
+                    <ng-container matColumnDef="type">
+                        <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
+                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ getTypeName(element.type) }} </mat-cell>
+                    </ng-container>
 
-                <ng-container matColumnDef="type">
-                    <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
-                    <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ getTypeName(element.type) }} </mat-cell>
-                </ng-container>
+                    <ng-container matColumnDef="created">
+                        <mat-header-cell *matHeaderCellDef> Created on </mat-header-cell>
+                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ element.createDate | date:'EEEE, MMMM d, y | H:mm:ss zzzz' }}</mat-cell>
+                    </ng-container>
 
-                <ng-container matColumnDef="created">
-                    <mat-header-cell *matHeaderCellDef> Created on </mat-header-cell>
-                    <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ element.createDate | date:'EEEE, MMMM d, y | H:mm:ss zzzz' }}</mat-cell>
-                </ng-container>
+                    <ng-container matColumnDef="actions">
+                        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                        <mat-cell *matCellDef="let element">
+                            <div class="action-buttons">
+                                <button mat-button (click)="modify(element)">Modify</button>
+                                <button mat-button (click)="delete(element)">Delete</button>
+                            </div>
+                        </mat-cell>
+                    </ng-container>
 
-                <ng-container matColumnDef="actions">
-                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <div class="action-buttons">
-                            <button mat-button (click)="modify(element)">Modify</button>
-                            <button mat-button (click)="delete(element)">Delete</button>
-                        </div>
-                    </mat-cell>
-                </ng-container>
+                </mat-table>
 
-            </mat-table>
+                <mat-table [dataSource]="markersData" *ngIf="isMobile">
+                    <mat-header-row *matHeaderRowDef="displayedColumnsMobile"></mat-header-row>
+                    <mat-row class="pointer" *matRowDef="let row; columns: displayedColumnsMobile;"></mat-row>
 
-            <mat-table [dataSource]="markersData" *ngIf="isMobile">
+                    <ng-container matColumnDef="name">
+                        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ element.name }}</mat-cell>
+                    </ng-container>
 
-                <mat-header-row *matHeaderRowDef="displayedColumnsMobile"></mat-header-row>
-                <mat-row class="pointer" *matRowDef="let row; columns: displayedColumnsMobile;"></mat-row>
+                    <ng-container matColumnDef="actions">
+                        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                        <mat-cell *matCellDef="let element">
+                            <div class="action-buttons">
+                                <button mat-button (click)="modify(element)">Modify</button>
+                                <button mat-button (click)="delete(element)">Delete</button>
+                            </div>
+                        </mat-cell>
+                    </ng-container>
 
-                <ng-container matColumnDef="name">
-                    <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-                    <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ element.name }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="actions">
-                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <div class="action-buttons">
-                            <button mat-button (click)="modify(element)">Modify</button>
-                            <button mat-button (click)="delete(element)">Delete</button>
-                        </div>
-                    </mat-cell>
-                </ng-container>
-
-            </mat-table>
-        </div>
-    </mat-card>
+                </mat-table>
+            </div>
+        </mat-expansion-panel>
+    </mat-accordion>
+    <br>
+    <app-my-markers-incoming-invitations></app-my-markers-incoming-invitations>
 </div>
