--- a/src/angular/road-story-tracking/src/app/home/components/my-markers/my-markers.component.html
+++ b/src/angular/road-story-tracking/src/app/home/components/my-markers/my-markers.component.html
@@ -11,19 +11,28 @@
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                     <mat-row class="pointer" *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
+                    <ng-container matColumnDef="image">
+                        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active"><img
+                                class="header-image" [src]="getHeaderImage(element.images) || ''" /></mat-cell>
+                    </ng-container>
+
                     <ng-container matColumnDef="name">
                         <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ element.name }}</mat-cell>
+                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{
+                            element.name }}</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="type">
                         <mat-header-cell *matHeaderCellDef> Type </mat-header-cell>
-                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ getTypeName(element.type) }} </mat-cell>
+                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{
+                            getTypeName(element.type) }} </mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="created">
                         <mat-header-cell *matHeaderCellDef> Created on </mat-header-cell>
-                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ element.createDate | date:'EEEE, MMMM d, y | H:mm:ss zzzz' }}</mat-cell>
+                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{
+                            element.createDate | date:'EEEE, MMMM d, y | H:mm:ss zzzz' }}</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="actions">
@@ -44,7 +53,8 @@
 
                     <ng-container matColumnDef="name">
                         <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{ element.name }}</mat-cell>
+                        <mat-cell *matCellDef="let element" [routerLink]="'/marker/' + element.id " routerLinkActive="active">{{
+                            element.name }}</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="actions">
